apps/appiecal-web-gql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-web-gql
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-web-gql
  template:
    metadata:
      labels:
        app: appiecal-web-gql
    spec:
      containers:
        - name: appiecal-web-gql
          image: ghcr.io/ijskoud/appiecal-web-gql@sha256:66b23e3635b737e6bc808811c0ec5f8c2ace9ce2b89d6a0a6364e3e2fa77626f
          ports:
            - containerPort: 4000
