apps/appiecal-web-gql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-web-gql
  namespace: default
spec:
  selector:
    app: appiecal-web-gql
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
